# vectormancer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic.py  quant_notes.txt
tests/: test_smoke.py
vectormancer/: __init__.py  core.py  quiz.py  test.py
vectormancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vectormancer/cli/: main.py
vectormancer/indexer/: chunker.py  embedder.py  extract.py  fetcher.py  scanner.py  store.py
vectormancer/web/: app.py
vectormancer/web/static/: index.html
